# quanta_mech_interp

./: .gitignore  QuantaMechInterp.pyproj  README.md  feature.md  filter.md  pyproject.toml  pytest.ini  quanta_mech_interp.pyproj  requirements.txt  setup.py  useful_tags.md
QuantaMechInterp/: __init__.py  ablate_add_useful.py  ablate_config.py  ablate_hooks.py  algo_search.py  model_config.py  model_loss_graph.py  model_pca.py  model_sae.py  model_sae_train.py  quanta_file_utils.py  quanta_map.py  useful_node.py
QuantaTools/: __init__.py
Tests/: test_ablate_hooks.py  test_algo_search.py  test_quanta_map_impact.py  test_quanta_result.py  test_useful_node_comprehensive.py  tests_config.py  tests_filter.py  tests_huggingface.py  tests_model_sae.py  tests_suite.py  tests_useful.py
assets/: readme.md
quanta_tools/: __init__.py  algo_config.py  model_pca.py  model_sae.py  model_sae_graph.py  model_sae_train.py  quanta_map_binary.py
