[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantaMechInterp"
version = "1.0"
description = "Quanta Mechanistic Interpretability tools"
authors = [{name = "Philip Quirke et al", email = "philipquirkenz@gmail.com"}]
dependencies = [
    "numpy>=1.18.1",
    "wheel",
    "plotly",
    "matplotlib",
    "scikit-learn",
    "scikit-optimize",
    "transformers_lens",
    "transformers",
    "torch"    
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.python]
requires = ">=3.10"

[tool.setuptools]
packages = ["QuantaMechInterp"]

[tool.setuptools.package-dir]
QuantaMechInterp="QuantaMechInterp"

